--- a/site/scss/_contact.scss
+++ b/site/scss/_contact.scss
@@ -1,3 +1,7 @@
+.contact__column {
+    margin-bottom: baselines(2);
+}
+
 .contact__social {
     display: inline-block;
     margin-left: -6px;
